--- a/inst/doc/Tutorial_Onemap_reduced_version.Rnw
+++ b/inst/doc/Tutorial_Onemap_reduced_version.Rnw
@@ -55,6 +55,9 @@
 
 \section{Overview}
 \label{overview}
+(The full version of this tutorial, with all \textsl{OneMap} outputs,
+can be found at \url{http://statgen.esalq.usp.br/Tutorial_Onemap_complete_version.pdf})
+
 {\sl OneMap} is an environment for constructing linkage maps in several experimental crosses, including outcrossing (full-sib families derived from two non-homozygous parents), RILs, F$_2$ and backcrosses. It is implemented as a package to be used under the freely distributed R software, which is a language and environment for statistical computing (\url{www.r-project.org}). It is designed to be fully integrated with R/qtl package (Broman et al., 2008) and Windows QTL Cartographer (Wang et al., 2010) in order to do QTL mapping.
 
 Wu et al. (2002a) proposed a methodology to construct genetic maps in outcrossing species, which allows the analysis of a mixed set of different marker types containing various segregation patterns. Also, it allows the simultaneous estimation of linkage and linkage phases between markers, and was successfully applied in the analysis of sugarcane (Garcia et al., 2006; Oliveira et al., 2007) and {\it Passiflora} (Oliveira et al., 2008) data sets. Actually, the analysis of these data sets motivated the implementation of the first release of {\sl OneMap} (Margarido et al., 2007). 
