--- a/vignettes/Outcrossing_Populations.Rmd
+++ b/vignettes/Outcrossing_Populations.Rmd
@@ -10,20 +10,23 @@
 ```
 
 The following example is intended to show the usage of `OneMap`
-functions for linkage mapping in outcrossing (non-inbred)
-species. With basic knowledge of R syntax, one should have no big
-problems using it. If you are not familiar with R software, we
-recommend reading the vignette [Introduction to R](http://htmlpreview.github.com/?https://github.com/augusto-garcia/onemap/blob/master/vignettes_html/Introduction_R.html)..
+functions for linkage mapping in outcrossing (non-inbred) species.
+With basic knowledge of R syntax, one should have no problems using
+it. If you are not familiar with R, we recommend reading the vignette
+[Introduction to R](http://htmlpreview.github.com/?https://github.com/augusto-garcia/onemap/blob/master/vignettes_html/Introduction_R.html)..
 
 Hopefully these examples will be clear enough to help any user to
-understand its functionality and start using it.
-
-You do not need to be an expert in R to build your linkage map, but
-some concepts are necessary and will help you through the process.
+understand its functionality and start using it. You do not need to be
+an expert in R to build your linkage map, but some concepts are
+necessary and will help you through the process.
 
 ## Creating the data file
 
-This step might be quite difficult, since the data file is not very simple and many errors can occur while reading it. The input file format is similar to that used by MAPMAKER/EXP (Lander et al., 1987), so experienced users of genetic analysis software should be already familiar with it.
+This step might be quite difficult, since the data file is not very
+simple and many errors can occur while reading it. The input file
+format is similar to that used by MAPMAKER/EXP (Lander et al., 1987),
+so experienced users of genetic analysis software should be already
+familiar with this scenario.
 
 Basically, the input file is a text file, where the first line
 indicates the number of individuals and the number of markers. Then,
@@ -31,42 +34,45 @@ the genotype information is included separately for each marker. The
 character `*` indicates the beginning of information input for a new
 marker, followed by the marker name. Next, there is a table withe
 codes indicating the marker type, according to Wu's et al. (2002a)
-notation.
+notation. Actually, it is recommended to check Wu's et al. (2002a)
+paper before using `OneMap`.
 
-|   |       |           | Parent         |                |    Offspring   |             |
-|---|-------|----------:|----------------|----------------|:--------------:|:-----------:|
-|   |       | Crosstype | Cross          | Observed bands | Observed bands | Segregation |
-| A |       |         1 | $ab \times cd$ | $ab \times cd$ | ac, ad, bc, bd |  $1:1:1:1$  |
-|   |       |         2 | $ab \times ac$ |                |                |             |
-|   |       |         3 | $ab \times co$ |                |                |             |
-|   |       |         4 | $ao \times bo$ |                |                |             |
-| B | $B1$  |         5 | $ab \times ao$ |                |                |   $1:2:1$   |
-|   | $B2$  |         6 | $ao \times ab$ |                |                |             |
-|   | $B3$  |         7 | $ab \times ab$ |                |                |             |
-| C |       |         8 | $ao \times ao$ |                |                |             |
-| D | $D1$  |         9 | $ab \times cc$ |                |                |             |
-|   |       |        10 | $ab \times aa$ |                |                |             |
-|   |       |        11 | $ab \times oo$ |                |                |             |
-|   |       |        12 | $bo \times aa$ |                |                |             |
-|   |       |        13 | $ao \times oo$ |                |                |             |
-|   | $D2$  |        14 | $cc \times ab$ |                |                |             |
-|   |       |        15 | $aa \times ab$ |                |                |             |
-|   |       |        16 | $oo \times ab$ |                |                |             |
-|   |       |        17 | $aa \times bo$ |                |                |             |
-|   |       |        18 | $oo \times ao$ |                |                |             |
+Marker types must be one of the following: `A.1`, `A.2`, `A.3`, `A.4`,
+`B1.5`, `B2.6`, `B3.7`, `C.8`, `D1.9`, `D1.10`, `D1.11`, `D1.12`,
+`D1.13`, `D2.14`, `D2.15`, `D2.16`, `D2.17` or `D2.18`, each one
+corresponding to a row of the following table:
 
+|     |       |           | Parent         |                |    Offspring   |             |
+|-----|-------|:---------:|:--------------:|:--------------:|:--------------:|:-----------:|
+|     |       | Crosstype | Cross          | Observed bands | Observed bands | Segregation |
+| $A$ |       |         1 | $ab \times cd$ | $ab \times cd$ | $ac, ad, bc, bd$ | $1:1:1:1$ |
+|     |       |         2 | $ab \times ac$ | $ab \times ac$ | $a, ac, ba, bc$ | $1:1:1:1$|
+|     |       |         3 | $ab \times co$ | $ab \times c$  | $ac, a, bc,b$  | $1:1:1:1$ |
+|     |       |         4 | $ao \times bo$ | $a  \times  b$ | $ab, a, b, o$  | $1:1:1:1$ |
+|     |       |           |                |                |       |  |
+| $B$ | $B_1$ |         5 | $ab \times ao$ | $ab \times a$  | $ab, 2a,b$ | $1:2:1$ |
+|     | $B_2$ |         6 | $ao \times ab$ | $a \times ab$  | $ab,2a,b$  | $1:2:1$ |
+|     | $B_3$ |         7 | $ab \times ab$ | $ab \times ab$ | $a, 2ab,b$ | $1:2:1$ |
+|     |       |           |                |                |       |  |
+| $C$ |       |         8 | $ao \times ao$ | $a \times a$   | $3a, o$        |  $3:1$      |
+|     |       |           |                |                |       |  |
+| $D$ | $D_1$ |         9 | $ab \times cc$ | $ab \times c$  | $ac, bc$       |  $1:1$      |
+|     |       |        10 | $ab \times aa$ | $ab \times a$  | $a, ab$        |  $1:1$      |
+|     |       |        11 | $ab \times oo$ | $ab \times o$  | $a, b$         |  $1:1$      |
+|     |       |        12 | $bo \times aa$ | $b \times a$   | $ab, a$        |  $1:1$      |
+|     |       |        13 | $ao \times oo$ | $a \times o$   | $a, o$         |  $1:1$      |
+|     | $D_2$ |        14 | $cc \times ab$ | $c \times ab$  | $ac, bc$       |  $1:1$      |
+|     |       |        15 | $aa \times ab$ | $a \times ab$  | $a, ab$        |  $1:1$      |
+|     |       |        16 | $oo \times ab$ | $o \times ab$  | $a, b$         |  $1:1$      |
+|     |       |        17 | $aa \times bo$ | $a \times b$   | $ab, a$        |  $1:1$      |
+|     |       |        18 | $oo \times ao$ | $o \times a$   | $a, o$         |  $1:1$      |
 
-Actually, it is recommended to check Wu's et al. (2002a) paper before
-using `OneMap`. Marker types must be one of the following: `A.1`,
-`A.2`, `A.3`, `A.4`, `B1.5`, `B2.6`, `B3.7`, `C.8`, `D1.9`, `D1.10`,
-`D1.11`, `D1.12`, `D1.13`, `D2.14`, `D2.15`, `D2.16`, `D2.17`} or
-`D2.18`, each one corresponding to a row of the table. The letter and
-the number before the dot indicate the segregation type (i.e.,
-`1:1:1:1`, `1:2:1`, `3:1` or `1:1`), while the number after the dot
-indicates the observed bands in the offspring. The paper cited above
-gives details with respect to marker types; we will not discuss them
-here, but it is easy to see that each marker is classified based on
-the band patterns on parents and progeny.
+The letter and the number before the dot indicate the segregation type
+(i.e., `1:1:1:1`, `1:2:1`, `3:1` or `1:1`), while the number after the
+dot indicates the observed bands in the offspring. The paper cited
+above gives details with respect to marker types; we will not discuss
+them here, but it is easy to see that each marker is classified based
+on the band patterns on parents and progeny.
 
 Finally, after each marker name, comes the genotype data for the
 segregating population. The coding for marker genotypes used by
